tests/assets/test_suites/w3c_wsdl20/documents/bad/RPC-14B/rpcstyleinout.wsdl
<?xml version="1.0" encoding="UTF-8"?>
<!-- https://dev.w3.org/2002/ws/desc/test-suite/documents/bad/RPC-14B/rpcstyleinout.wsdl -->
<!-- Copyright © 2007-03-23 05:51 - W3C, (MIT, ERCIM, Keio). All Rights Reserved. http://www.w3.org/Consortium/Legal/2002/copyright-documents-20021231 -->
<wsdl:description targetNamespace="http://example.org/"
	xmlns:wsdl="http://www.w3.org/ns/wsdl"
	xmlns:xs="http://www.w3.org/2001/XMLSchema"
	xmlns:tns="http://example.org/"
	xmlns:s1="http://example.org/schema1"
	xmlns:s2="http://example.org/schema2">

	<wsdl:documentation>
		This test shows an invalid use of a WSDL 2.0 interface with rpc style
		and in-out MEP. The input and output elements are defined in 
		different namespaces.
	</wsdl:documentation>
	
	<wsdl:types>
		<xs:schema targetNamespace="http://example.org/schema1">
			<xs:element name="myOperation">
				<xs:complexType>
					<xs:sequence>
						<xs:element name="element1" type="xs:string"/>
					</xs:sequence>
				</xs:complexType>
			</xs:element>
		</xs:schema>
		<xs:schema targetNamespace="http://example.org/schema2">
			<xs:element name="myOperation">
				<xs:complexType>
					<xs:sequence>
						<xs:element name="element1" type="xs:string"/>
					</xs:sequence>
				</xs:complexType>
			</xs:element>
		</xs:schema>
	</wsdl:types>

	<wsdl:interface name="myInterface"
		styleDefault="http://www.w3.org/ns/wsdl/style/rpc">
		<wsdl:operation name="myOperation"
			pattern="http://www.w3.org/ns/wsdl/in-out">
			<wsdl:input messageLabel="In" element="s1:myOperation" />
			<wsdl:output messageLabel="Out" element="s2:myOperationOutput" />
		</wsdl:operation>
	</wsdl:interface>
</wsdl:description>
